objects/ArObjB1__c.object
<CustomObject>
    <fields>
        <fullName>ArObjB1Desc__c</fullName>
        <label>ArObjB1Desc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>FF</fullName>
                </value>
                <value>
                    <fullName>GG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArObjB1Phone__c</fullName>
        <label>ArObjB1Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ArObjB1Picklist1__c</fullName>
        <label>ArObjB1Picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aa</fullName>
                    <default>true</default>
                    <label>aa</label>
                </value>
                <value>
                    <fullName>bb</fullName>
                </value>
                <value>
                    <fullName>cc</fullName>
                </value>
                <value>
                    <fullName>dd</fullName>
                </value>
                <value>
                    <fullName>ee</fullName>
                </value>
                <value>
                    <fullName>ff</fullName>
                </value>
                <value>
                    <fullName>gg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ArObjB1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArObjB1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArObjB1s</pluralLabel>
    <recordTypes>
        <fullName>ArObjB1</fullName>
        <active>true</active>
        <label>ArObjB1_qustions</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArObjB1_qustions2</fullName>
        <active>true</active>
        <label>ArObjB1_qustions2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>